--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_string">Welcome in AA AIO Tweaker\n
-This app will let you apply some tweaks to Android Auto\n
-Simply select what tweak you want to apply :)\n
-If you are unsure of what a tweak does, long press on it and a tutorial will show up.</string>
-    <string name="select_apps">Select apps</string>
-    <string name="enable_assistant_shortcuts">Assistant shortcuts</string>
-    <string name="patch_custom_apps">custom apps</string>
-    <string name="disable_speed_limitations">tap limitations</string>
-    <string name="unlimited_scrolling_when_driving">speed restrictions</string>
-    <string name="enable_assistant_animation_in_navbar">Assistant animation in navbar</string>
+    <string name="main_string">Bine ați venit în AA AIO Tweaker\n
+Această aplicație vă va permite să aplicați câteva modificări pe Android Auto\n
+Pur și simplu selectați ceea ce doriți să aplicați :)\n
+Dacă nu sunteți sigur de ceea ce face o modificare, apăsați lung pe el și un tutorial va apărea.</string>
+    <string name="select_apps">Selectaţi Aplicaţiile</string>
+    <string name="enable_assistant_shortcuts">Scurtături asistente</string>
+    <string name="patch_custom_apps">aplicații particularizate</string>
+    <string name="disable_speed_limitations">limitări atingere</string>
+    <string name="unlimited_scrolling_when_driving">restricții de viteză</string>
+    <string name="enable_assistant_animation_in_navbar">Animație asistentă în bara de navigare</string>
     <string name="splash">This app can alter Android Auto behaviour and bypass some safety features that Google has implemented in Android Auto.\n
 By using this software, you agree that YOU, and ONLY YOU, are solely responsible for any possible consequence that may result in altering safety features such as injury to yourself and/or others, property damage, loss of life.\n
 Under no circumstances is the author of this app responsible for its use</string>
-    <string name="proceed">I understand</string>
-    <string name="navigation_at_start">Navigation at start</string>
-    <string name="statb_opaque_string">Force Opaque Statusbar</string>
-    <string name="battery_outline_string">battery saver outline</string>
-    <string name="legend">Status Legend:\n
-GREEN= Patch applied\n
-YELLOW= Reboot is needed to apply patch\n
-RED= Patch is not applied\n</string>
-    <string name="set_notification_duration_to">Notification duration to</string>
-    <string name="base_no_ws">Widescreen</string>
-    <string name="force_widescreen_text">Force Widescreen</string>
-    <string name="media_notification_duration_to">Media notification duration to</string>
+    <string name="proceed">Înţeleg</string>
+    <string name="navigation_at_start">Pornire automată a navigației</string>
+    <string name="statb_opaque_string">Forțează bara de stare opacă</string>
+    <string name="battery_outline_string">contur optimizare baterie</string>
+    <string name="legend">Status Legendă:\n
+VERDE= Patch aplicat\n
+GALBEN= Repornirea este necesară pentru a aplica patch-ul\n
+ROȘU= Patch-ul nu este aplicat\n</string>
+    <string name="set_notification_duration_to">Durata notificării la</string>
+    <string name="base_no_ws">Ecran larg</string>
+    <string name="force_widescreen_text">Forțează ecran lărgit</string>
+    <string name="media_notification_duration_to">Durata notificării media la</string>
     <string name="bluetooth_auto_connect">Bluetooth auto connect</string>
     <string name="tutorial_nospeed">This tweak will make Android Auto think that the car is at 0 speed. As a result, Android Auto will always show the preview of messages. This tweak does not apply to keyboard or first configuration of Android Auto.</string>
     <string name="tutorial_sixtap">This tweak will override the 6 tap limit of Android Auto and will make unlimited browsing of content always possible.</string>
@@ -52,28 +52,28 @@ This feature is probably under development and could potentially not work as int
 Android Auto 5.8 or superior is required.</string>
     <string name="battery_warning">Battery saver warning</string>
     <string name="tutorial_battery_saver_warning">This tweak will prevent Android Auto from giving popup warnings when battery saver mode is on</string>
-    <string name="disable_tweak_string">Disable\u0020</string>
-    <string name="enable_tweak_string">Enable\u0020</string>
+    <string name="disable_tweak_string">Dezactivați\u0020</string>
+    <string name="enable_tweak_string">Activați\u0020</string>
     <string name="re_enable_tweak_string">Re-enable\u0020</string>
-    <string name="copy_log">Copy log</string>
-    <string name="about">About</string>
+    <string name="copy_log">Copiați jurnal</string>
+    <string name="about">Despre</string>
     <string name="revert_everything">Revert everything</string>
     <string name="force_disable_tweak">Force Disable\u0020</string>
     <string name="reset_tweak">Reset\u0020</string>
     <string name="force_widescreen_warning">Force widescreen has been automatically disabled</string>
     <string name="force_disable_widescreen_warning">Force disable widescreen has been automatically disabled</string>
-    <string name="set_value">Set\u0020</string>
+    <string name="set_value">Setați\u0020</string>
     <string name="reboot_to_apply">REBOOT TO APPLY</string>
-    <string name="warning_title">WARNING</string>
+    <string name="warning_title">ATENȚIE</string>
     <string name="unpatch">Unpatch\u0020</string>
     <string name="patch_app">Patch\u0020</string>
-    <string name="default_string">\u0020Default</string>
-    <string name="app_list_label">Apps List</string>
-    <string name="translators_button">Translated by</string>
+    <string name="default_string">\u0020Implicit</string>
+    <string name="app_list_label">Listă aplicații</string>
+    <string name="translators_button">Tradus de</string>
     <string name="about_part_one"><![CDATA[AA AIO TWEAKER is developed and maintained by Shmykelsa.<br><br>Source code is available on <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
     <string name="about_part_two"><![CDATA[If you really like my work, please consider a donation.<br> You can donate me through <a href=\"http://www.paypal.me/grizzo96\">PayPal</a> or you can copy my Bitcoin address with the button down below.<br><br>Even a small amount will be much appreciated :)]]></string>
     <string name="copied_address_toast">BTC Address copied to clipboard</string>
-    <string name="custom_wallpapers">Wallpapers</string>
+    <string name="custom_wallpapers">Imagini de fundal</string>
     <string name="tutorial_wallpapers">This tweak will activate the new built in wallpaper changer in Android Auto. Android Auto 5.8 or superior is required.\nWARNING: If you are a user of Wallpapers For Android Auto, you will need to update it to at least version 3.0, otherwise this tweak will break Wallpapers For Android Auto functionality.</string>
     <string name="tutorial_dark_mode">Starting from December 2020, Google reverted a behaviour that happened since Android 10. Previously, the light/dark mode on Android Auto followed the light/dark mode on the phone and vice versa. This meant that switching the phone to dark mode had effect on the car, or if the phone was in dark mode and the car had lights off it used to switch on the light theme on the phone.\n However, since this feature of \"independent\" dark mode was introduced, users with Aftermarket headunits have no way to switch to dark mode anymore without actually wiring the stereo to the car\'s lights.\n This tweak makes sure that night mode is again dependent from phone and switching light/dark mode on phone will have its effects on cars too.</string>
     <string name="dark_mode_tweak">independent dark mode</string>
@@ -83,7 +83,7 @@ WARNING: This tweak has not been extensively tested and could potentially break 
     <string name="reboot_prompt">Reboot phone now?</string>
     <string name="rebooting_action">Rebooting…</string>
     <string name="negative_button">cancel</string>
-    <string name="added_app_action">Added: </string>
+    <string name="added_app_action">"Added: "</string>
     <string name="removed_app_action">Removed\u0020</string>
     <string name="root_access_warning">Root access denied. Please allow root access.</string>
     <string name="revert_everything_dialog">Do you want to revert everything? Please manually restart the app after doing so</string>
@@ -96,11 +96,7 @@ WARNING: This tweak has not been extensively tested and could potentially break 
     <string name="not_enabled_warning">Android Auto is not enabled</string>
     <string name="not_installed_warning">Android Auto is not installed</string>
     <string name="currently_set">"Currently set: "</string>
-    <string name="tutorial_messages_tweak">"This tweak will make some messaging apps appear as an icon on Android Auto. Once opened, the notifications of that app will appear. Notifications will still be received on notifications' center too. "</string>
-    <string name="messages_tweak_string">messaging apps</string>
     <string name="no_accounts_warning">AA AIO TWEAKER could not find any account in Google Play Services database. This can be caused by several different things such as:\n • Device that is mostly not connected to internet\n • Fresh install of the phone\n • Corrupted Google Play Services database\n • Removal of Google account(s) from the phone\n • Cleared datas of Google Play Services\n\nIn this scenario, AA AIO TWEAKER will FAIL to work properly. If you recently removed a Google account or cleared Google Play Services datas, please keep the phone connected to internet and let it build the Google Play Services database fully. This might take several hours, in some cases also days.\n\nIf you are not in one of the above conditions, please open a issue on GitHub.</string>
-    <string name="media_tabs_string">aplicatii de tip media in fisa de vizualizare</string>
-    <string name="tutorial_media_tabs">"Acest tweak va forta activarea noului UI pentru applicatiile de tip media. Nu toate aplicatiile supporta acest tip de UI. Android 5.8 sau mai mare este necesar. "</string>
     <string name="tweak_loading">Se aplica tweak-ul...</string>
     <string name="loading">Se incarca, te rugam sa astepti...</string>
     <string name="tutorial_bitrate">This tweak will increase or decrease video bitrate according to the multiplier set (up to 2.0x). Increasing the bitrate (more than 1.0x) will mean that more datas will be streamed to the car and quality of video streaming could be improved in visual quality, however it might cause instability. Decreasing the bitrate (less than 1.0x) will compress the stream to the car and quality will be decreased, but it will result in a more reliable and fast connection.</string>
@@ -125,4 +121,8 @@ WARNING: This tweak has not been extensively tested and could potentially break 
     <string name="remove_paired_car">Remove a paired car</string>
     <string name="choose_cars">Choose car(s)</string>
     <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
