--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -96,7 +96,7 @@ UPOZORNĚNÍ: Toto nastavení nebylo podrobeno rozsáhlému testování a mohlo 
     <string name="reboot_prompt">Chcete restartovat telefon nyní?</string>
     <string name="rebooting_action">Restartování…</string>
     <string name="negative_button">zrušit</string>
-    <string name="added_app_action">Přidáno: </string>
+    <string name="added_app_action">"Přidáno: "</string>
     <string name="removed_app_action">Odstraněno\u0020</string>
     <string name="root_access_warning">Přístup k ROOT byl odepřen. Povolte přístup k ROOT.</string>
     <string name="revert_everything_dialog">Chcete obnovit vše? Po ukončení činnosti manuálně restartujte aplikaci.</string>
@@ -109,11 +109,7 @@ UPOZORNĚNÍ: Toto nastavení nebylo podrobeno rozsáhlému testování a mohlo 
     <string name="not_enabled_warning">Android Auto není povoleno</string>
     <string name="not_installed_warning">Android Auto není nainstalováno</string>
     <string name="currently_set">"Aktuálně nastaveno: "</string>
-    <string name="tutorial_messages_tweak">"Toto nastavení umožní zobrazení některých aplikací pro zasílání zpráv v Android Auto jako ikona. Po otevření se zobrazí oznámení dané aplikace. Oznámení budou stále přijímána také do centra oznámení. "</string>
-    <string name="messages_tweak_string">aplikace pro zasílání zpráv</string>
     <string name="no_accounts_warning">AA AIO TWEAKER nemohl najít žádný účet v databázi služeb Google Play. To může být způsobeno několika různými věcmi jako:\n • Zařízení není připojeno k internetu\n • Čerstvá instalace telefonu\n • poškozená databáze služeb Google Play\n • Odstranění účtu(ů) Google z telefonu\n • Vymazaná data služeb Google Play\n\nKvůli teto chybe nebude AA AIO TWEAKER řádně fungovat. Pokud jste nedávno odstranili účet Google nebo vymazali data služeb Google Play, připojte prosím telefon k internetu a nechte jej plně sestavit databázi služeb Google Play. To může trvat několik hodin, v některých případech i několik dní.\n\nPokud se Vám tato chyba vyskytla, ale nedělali jste nic z výše uvedeného, založte prosím požadavek na GitHub.</string>
-    <string name="media_tabs_string">záložky v mediálních aplikacích</string>
-    <string name="tutorial_media_tabs">"Toto nastavení vynutí zapnutí nového UI pro multimediální aplikace. Ne každá aplikace podporuje toto UI. Je vyžadováno Android Auto verze 5.8 nebo vyšší. "</string>
     <string name="tweak_loading">Používání nastavení...</string>
     <string name="loading">Nahrávání, prosím čekejte...</string>
     <string name="tutorial_bitrate">Toto nastavení zvýší nebo sníží přenosovou rychlost obrazu podle nastavení nasobiče (až do 2.0x). Zvýšení přenosové rychlosti (více než 1.0x) znamená, že do auta bude přenášeno více dat a tím se zlepší kvalita přenášeného obrazu, nicméně to může způsobit nestabilitu. Snížením přenosové rychlosti (méně než 1.0x) se přenášený obraz do auta zkomprimuje a tím se kvalita přenášeného obrazu zhorší, nicméně výsledkem bude spolehlivější a rychlejší připojení.</string>
@@ -123,19 +119,23 @@ UPOZORNĚNÍ: Toto nastavení nebylo podrobeno rozsáhlému testování a mohlo 
     <string name="open_issue_button">Nahlásit problém</string>
     <string name="error_generic">Příkaz nebyl úspěšný. Počkejte prosím několik minut a zkuste to znovu. Pokud problém stále přetrvává nahlašte prosím problém na GitHub</string>
     <string name="tutorial_alphajump">Toto nastavení aktivuje nový (a skrytý) vzhled, který změní, jak se budou zobrazovat veškeré seznamy podle začátečních písmen. Místo pevně umístěného tlačítka A-Z na vrchu seznamu, se tlačítko bude přesouvat společně se scrollbarem a vy tak nebudete muset pokaždé najíždět až na vrchol seznamu.</string>
-    <string name="alpha_jump_tweak">new alphabet jump</string>
-    <string name="choose_accounts">Choose accounts</string>
-    <string name="use_all">Use all (EXPERIMENTAL)</string>
-    <string name="copied_pastebin">A link to the log has been created and copied to clipboard</string>
-    <string name="log_copied">Log has been copied</string>
-    <string name="new_version_available">New Version available</string>
-    <string name="go_to_new_version">A new version of AA AIO TWEAKER (version %1$s) is available on GitHub. Do you want to download it now?</string>
-    <string name="go_to_download">Go to download</string>
-    <string name="ignore_for_now">Ignore for now</string>
-    <string name="many_accounts_warning">AA AIO TWEAKER found a large number (%1$s) of Google accounts saved in the device.\nThis can negatively impact on the success of the patching process and AA AIO TWEAKER might fail.\nYou can either choose the account(s) that you mostly use with Google Play Services to apply the patch to just them (2 or less is recommended) or activate an experimental mode that should patch all accounts.\nPLEASE NOTE that the experimental mode might cause some crashes to the phone while the patch is running.</string>
-    <string name="dark_switch_tweak">day/night option</string>
-    <string name="tutorial_darkmodeswitch">This tweak will activate a dedicated toggle in Android Auto generic settings (both car and phone) that can control the status of day/night mode on Android Auto. This option is different from the one in developer settings because it doesn\'t need a restart of Android Auto and it will actually have effect on the usage after Google enabling the independent dark mode. Android Auto 6.3 or superior is required.</string>
-    <string name="remove_paired_car">Remove a paired car</string>
-    <string name="choose_cars">Choose car(s)</string>
-    <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="alpha_jump_tweak">nové abecední řazení</string>
+    <string name="choose_accounts">Vyberte účty</string>
+    <string name="use_all">Použít vše (EXPERIMENTÁLNÍ)</string>
+    <string name="copied_pastebin">Odkaz na protokol byl vytvořen a zkopírován do schránky</string>
+    <string name="log_copied">Protokol byl zkopírován</string>
+    <string name="new_version_available">Nová verze je dostupná</string>
+    <string name="go_to_new_version">Nová verze AA AIO TWEAKER (verze %1$s) je dostupná na GitHub. Chcete ji nyní stáhnout?</string>
+    <string name="go_to_download">Přejít na stažení</string>
+    <string name="ignore_for_now">Nyní ignorovat</string>
+    <string name="many_accounts_warning">AA AIO TWEAKER našel ve vašem zarizení větší množství (%1$s) Google účtů. \nToto bude mít negativní dopad na úspěšnost aplikace nastavení a AA AIO TWEAKER může selhat.\nBuď můžete vybrat jeden z účtů, které nejvice používáte se službami Google Play, pro aplikaci nastavení pouze na ně (doporučeno dvs nebo méně), nebo aktivujete experimentální režim, díky kterému se nastavení aplikuje na všechny účty.\nUPOZORNĚNÍ, tento experimentální režim může, při aplikaci nastavení způsobit pády systému.</string>
+    <string name="dark_switch_tweak">volby dne/noci</string>
+    <string name="tutorial_darkmodeswitch">Toto nastavení aktivuje vestavěné přepínání v běžném nastavení Android Auto (jak v autě, tak v telefonu), tímto můžete nastavit zdali program bude v režimu den/noc. Tato volba je odlišná od té ve vývojářském nastavení, protože nepotebuje restart aplikace a změna se projeví okamžitě oo zapnutí nezávislého tmavého režimu. Je vyžadována Android Auto verze 6.3, nebo vyšší.</string>
+    <string name="remove_paired_car">Odstranit spárované vozidlo</string>
+    <string name="choose_cars">Vyberte vozidlo(a)</string>
+    <string name="tutorial_carremover">Věděli jste, že si v Android Auto nemůžete vybrat, které vozidlo chcete odstranit a můžete odstranit pouze všechna vozidla najednou? Tato volba vás zachrání, když chcete smazat jen jedno vozidlo. Stačí si vybrat, které z aut chcete smazat a potvrdit.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
