--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -4,7 +4,7 @@
 Esta herramienta te permitirá modificar y personalizar Android Auto.\n
 Solo tendrás que seleccionar la modificación que quieras aplicar :)\n
 Si no estás seguro de lo que hace una función, mantén pulsada la opción y aparecerá un tutorial.</string>
-    <string name="select_apps">Seleccionar aplicaciones:</string>
+    <string name="select_apps">Seleccionar aplicación</string>
     <string name="enable_assistant_shortcuts">Atajos del asistente</string>
     <string name="patch_custom_apps">Aplicaciones personalizadas</string>
     <string name="disable_speed_limitations">Limitación de toques</string>
@@ -86,7 +86,7 @@ ADVERTENCIA: Esta modificación no ha sido probada extensivamente y podría pote
     <string name="reboot_prompt">¿Reiniciar teléfono ahora?</string>
     <string name="rebooting_action">Reiniciando…</string>
     <string name="negative_button">Cancelar</string>
-    <string name="added_app_action">Añadido: </string>
+    <string name="added_app_action">"Añadido: "</string>
     <string name="removed_app_action">Eliminado\u0020</string>
     <string name="root_access_warning">Acceso root denegado. Por favor permita el acceso root.</string>
     <string name="revert_everything_dialog">¿Quieres revertir todo? Por favor reinicia manualmente la aplicación después de hacerlo</string>
@@ -99,11 +99,7 @@ ADVERTENCIA: Esta modificación no ha sido probada extensivamente y podría pote
     <string name="not_enabled_warning">Android Auto no está activo</string>
     <string name="not_installed_warning">Android Auto no está instalado</string>
     <string name="currently_set">"Actualmente establecido: "</string>
-    <string name="tutorial_messages_tweak">"Esta modificación hará que algunas aplicaciones de mensajería aparezcan como un icono en Android Auto. Una vez abiertas, aparecerán las notificaciones para esa aplicación. Las notificaciones aún se seguirán recibiendo en el centro de notificaciones."</string>
-    <string name="messages_tweak_string">Aplicaciones de mensajería</string>
     <string name="no_accounts_warning">AA AIO TWEAKER no pudo encontrar ninguna cuenta en la base de datos de Google Play Services. Esto puede ser debido a distintas razones, como:\n • Dispositivo no conectado a Internet\n • Instalación de fábrica reciente en el teléfono\n • Base de datos de Google Play Services corrompida\n • Cuenta(s) de Google eliminada(s) del teléfono\n • Datos eliminados de Google Play Services\n\nEn este escenario, AA AIO TWEAKER NO funcionará correctamente. Si eliminaste recientemente una cuenta de Google o borraste los datos de Google Play Services, por favor mantén el teléfono conectado a Internet y deja que se reconstruya la base de datos de Google Play Services completamente. Esto podría llevar varias horas, y en algunos casos hasta dias.\n\nSi no te encuentras en ninguna de las situaciones de arriba, por favor abre una incidencia en GitHub.</string>
-    <string name="media_tabs_string">Ver aplicaciones multimedia con pestañas</string>
-    <string name="tutorial_media_tabs">"Este ajuste obligará a habilitar una nueva interfaz de usuario para aplicaciones multimedia. No todas las aplicaciones soportan esta interfaz de usuario. Se requiere Android Auto 5.8 o superior. "</string>
     <string name="tweak_loading">Aplicando el ajuste...</string>
     <string name="loading">Cargando, por favor espere...</string>
     <string name="tutorial_bitrate">Esta modificación incrementará o reducirá la tasa de bits de vídeo dependiendo de la configuración fijada en el multiplicador (hasta 2.0x). Incrementando la tasa de bits (más de 1. x) transmitirá más datos al coche y la calidad del streaming de vídeo podría mejorarse en calidad visual. Sin embargo, puede causar inestabilidad. Disminuir la tasa de bits (menos de 1. x) comprimirá el flujo de datos hacia el coche y la calidad visual disminuirá, pero proporcionará una conexión más estable y rápida.</string>
@@ -114,18 +110,22 @@ ADVERTENCIA: Esta modificación no ha sido probada extensivamente y podría pote
     <string name="error_generic">El comando no tuvo exito. Por favor espera un par de minutos e inténtalo de nuevo. Si el problema persiste, por favor abre una incidencia en GitHub</string>
     <string name="tutorial_alphajump">Esta modificación activará un nuevo (y oculto) rediseño que cambia como explorar listas por letra alfabética. En vez de tener el botón A-Z en la parte superior, el botón aparecerá en la barra de desplazamiento, y cuando no haya desplazamiento activo no te forzará a volver hacia arriba para explorar por letras de nuevo. </string>
     <string name="alpha_jump_tweak">Nuevo salto alfabético</string>
-    <string name="choose_accounts">Choose accounts</string>
-    <string name="use_all">Use all (EXPERIMENTAL)</string>
-    <string name="copied_pastebin">A link to the log has been created and copied to clipboard</string>
-    <string name="log_copied">Log has been copied</string>
-    <string name="new_version_available">New Version available</string>
-    <string name="go_to_new_version">A new version of AA AIO TWEAKER (version %1$s) is available on GitHub. Do you want to download it now?</string>
-    <string name="go_to_download">Go to download</string>
-    <string name="ignore_for_now">Ignore for now</string>
+    <string name="choose_accounts">Elige cuenta</string>
+    <string name="use_all">Usar todo (EXPERIMENTAL)</string>
+    <string name="copied_pastebin">Ein Link zum Protokoll wurde erstellt und in die Zwischenablage kopiert</string>
+    <string name="log_copied">Dnevnik aktivnosti je bil kopiran</string>
+    <string name="new_version_available">Nueva versión disponible</string>
+    <string name="go_to_new_version">Una nueva versión de AAAD (versión %1$s) está disponible en GitHub. ¿Quieres descargarla ahora?</string>
+    <string name="go_to_download">Ir a descargas</string>
+    <string name="ignore_for_now">Ninguno por ahora</string>
     <string name="many_accounts_warning">AA AIO TWEAKER found a large number (%1$s) of Google accounts saved in the device.\nThis can negatively impact on the success of the patching process and AA AIO TWEAKER might fail.\nYou can either choose the account(s) that you mostly use with Google Play Services to apply the patch to just them (2 or less is recommended) or activate an experimental mode that should patch all accounts.\nPLEASE NOTE that the experimental mode might cause some crashes to the phone while the patch is running.</string>
-    <string name="dark_switch_tweak">day/night option</string>
+    <string name="dark_switch_tweak">opción diurno/noche</string>
     <string name="tutorial_darkmodeswitch">This tweak will activate a dedicated toggle in Android Auto generic settings (both car and phone) that can control the status of day/night mode on Android Auto. This option is different from the one in developer settings because it doesn\'t need a restart of Android Auto and it will actually have effect on the usage after Google enabling the independent dark mode. Android Auto 6.3 or superior is required.</string>
     <string name="remove_paired_car">Remove a paired car</string>
     <string name="choose_cars">Choose car(s)</string>
     <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
