--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_string">Bienvenue sur AA AIO Tweaker\n
-Cette application vous permettra d\'appliquer diverses améliorations à Android Auto\n
-Sélectionnez simplement la modification que vous souhaitez appliquer :)\n
-Si vous n\'êtes pas certain de la signification d\'une modification, maintenez son bouton enfoncé et un tutoriel s\'affichera.</string>
-    <string name="select_apps">Sélectionner les applications</string>
+    <string name="main_string">Welcome in AA AIO Tweaker\n
+This app will let you apply some tweaks to Android Auto\n
+Simply select what tweak you want to apply :)\n
+If you are unsure of what a tweak does, long press on it and a tutorial will show up.</string>
+    <string name="select_apps">Sélectionner les apps</string>
     <string name="enable_assistant_shortcuts">Raccourcis de l\'assistant</string>
     <string name="patch_custom_apps">Applications personnalisées</string>
     <string name="disable_speed_limitations">Limitation d\'appuis sur l\'écran</string>
@@ -84,7 +84,7 @@ ATTENTION : Cette modification n\'a pas été testée de manière approfondie et
     <string name="reboot_prompt">Redémarrer le téléphone maintenant ?</string>
     <string name="rebooting_action">Redémarrage en cours…</string>
     <string name="negative_button">annuler</string>
-    <string name="added_app_action">Ajouté : </string>
+    <string name="added_app_action">"Ajouté : "</string>
     <string name="removed_app_action">Supprimé\u0020</string>
     <string name="root_access_warning">Accès Root refusé. Veuillez autoriser l\'accès root.</string>
     <string name="revert_everything_dialog">Voulez-vous réinitialiser toutes les modifications ? L\'application devra être redémarrée manuellement pour que les changements prennent effet</string>
@@ -97,11 +97,7 @@ ATTENTION : Cette modification n\'a pas été testée de manière approfondie et
     <string name="not_enabled_warning">Android Auto n\'est pas activé</string>
     <string name="not_installed_warning">Android Auto n\'est pas installé</string>
     <string name="currently_set">"Actuellement défini : "</string>
-    <string name="tutorial_messages_tweak">"Cette modification fera apparaître certaines applications de messagerie sous forme d'icône sur Android Auto. Une fois ouverte, les notifications de cette application apparaîtront. Les notifications seront toujours reçues dans le centre des notifications. "</string>
-    <string name="messages_tweak_string">applications de messagerie</string>
     <string name="no_accounts_warning">AA AIO TWEAKER n\'a pu trouver aucun compte dans la base de données des services Google Play. Cela peut être dû à différentes raisons :\n • Appareil qui n\'est généralement pas connecté à internet\n • Nouvelle installation du téléphone\n • Base de données des services Google Play corrompue\n • Suppression du ou des comptes Google du téléphone\n • Données effacées des services Google Play\n\nSi vous êtes dans l\'un de ce ces cas de figure, AA AIO TWEAKER ne fonctionnera pas correctement. Si vous avez récemment supprimé un compte Google ou effacé les données des services Google Play, veuillez garder le téléphone connecté à Internet et le laisser reconstruire entièrement la base de données des services Google Play. Cela peut prendre plusieurs heures, voire des jours dans certains cas.\n\nSi vous n\'êtes pas dans l\'une des conditions ci-dessus, merci d\'ouvrir un ticket sur GitHub.</string>
-    <string name="media_tabs_string">vue par onglets des applications multimédias</string>
-    <string name="tutorial_media_tabs">"Cette modification activera une nouvelle interface utilisateur pour les applications multimédias. Toutes les applications ne prennent pas en charge cette interface utilisateur. Android Auto 5.8 ou supérieur est requis. "</string>
     <string name="tweak_loading">Application de la modification...</string>
     <string name="loading">Chargement, veuillez patienter...</string>
     <string name="tutorial_bitrate">Cette modification augmentera ou diminuera le débit vidéo en fonction du multiplicateur défini (jusqu\'à 2.0x). Une augmentation du débit (plus de 1.0x) signifie que davantage de données seront transmises en continu à la voiture et que la qualité visuelle de la diffusion vidéo pourrait être améliorée, mais cela peut potentiellement générer une instabilité. Une diminution du débit (moins de 1.0x) compressera le flux et la qualité sera diminuée, mais elle permettra d\'obtenir une connexion plus fiable et plus rapide.</string>
@@ -110,20 +106,24 @@ ATTENTION : Cette modification n\'a pas été testée de manière approfondie et
     <string name="choose_value_first">Choisissez d\'abord une valeur</string>
     <string name="open_issue_button">Ouvrir un ticket</string>
     <string name="error_generic">La commande a échoué. Veuillez patienter quelques minutes et réessayer. Si le problème est toujours en cours, veuillez ouvrir un ticket sur GitHub</string>
-    <string name="tutorial_alphajump">Cette modification activera une nouvelle (et cachée) refonte qui change la façon dont les listes peuvent être parcourues avec des lettres. Au lieu du bouton A-Z en haut, le bouton apparaîtra sur la barre de défilement lorsqu\'il n\'y aura pas de défilement et vous ne serez plus obligé d\'aller en haut pour naviguer avec des lettres.</string>
-    <string name="alpha_jump_tweak">nouveau saut alphabétique</string>
+    <string name="tutorial_alphajump">Cette modification activera un nouveau design de bouton pour faire défiler rapidement les listes par lettre. Au lieu du bouton A-Z en haut de la liste, le bouton apparaîtra sur la barre de défilement lorsque la liste n\'est pas en mouvement et vous n\'aurez plus besoin d\'aller en haut pour naviguer par lettre.</string>
+    <string name="alpha_jump_tweak">nouveau design de bouton alphabétique</string>
     <string name="choose_accounts">Choisissez un compte</string>
     <string name="use_all">Tout utiliser (EXPÉRIMENTAL)</string>
     <string name="copied_pastebin">Un lien vers le journal a été créé et copié dans le presse-papier</string>
     <string name="log_copied">Le journal a été copié</string>
-    <string name="new_version_available">Une nouvelle version est disponible</string>
+    <string name="new_version_available">Nouvelle version disponible</string>
     <string name="go_to_new_version">Une nouvelle version de AA AIO TWEAKER (version %1$s) est disponible sur GitHub. Voulez-vous la télécharger maintenant ?</string>
-    <string name="go_to_download">Aller au téléchargement</string>
+    <string name="go_to_download">Télécharger sur GitHub</string>
     <string name="ignore_for_now">Ignorer pour l\'instant</string>
     <string name="many_accounts_warning">AA AIO TWEAKER a détecté un grand nombre (%1$s) de comptes Google enregistrés sur l\'appareil.\nCela peut avoir un impact négatif sur la réussite de l\'exécution du patch et AA AIO TWEAKER pourrait être amené à échouer.\nVous pouvez soit choisir le(s) compte(s) que vous utilisez principalement avec les services Google Play pour n\'appliquer le patch qu\'à eux (2 ou moins est recommandé), soit activer un mode expérimental qui corrigera tous les comptes.\nVEUILLEZ NOTER que le mode expérimental peut provoquer des plantages du téléphone pendant l\'exécution du patch.</string>
     <string name="dark_switch_tweak">Mode jour/nuit</string>
     <string name="tutorial_darkmodeswitch">Cette modification activera un bouton dédié dans les paramètres génériques d\'Android Auto (à la fois pour la voiture et le téléphone) qui peut contrôler l\'état du mode jour/nuit sur Android Auto. Cette option est différente de celle des paramètres du développeur car elle ne nécessite pas un redémarrage d\'Android Auto et elle aura un effet sur l\'utilisation après l\'activation par Google du mode sombre indépendant. Android Auto 6.3 ou supérieur est requis.</string>
-    <string name="remove_paired_car">Retirer une voiture appariée</string>
-    <string name="choose_cars">Sélectionner le(s) voiture(s)</string>
+    <string name="remove_paired_car">Supprimer une voiture appairée</string>
+    <string name="choose_cars">Sélectionner la ou les voitures</string>
     <string name="tutorial_carremover">Saviez-vous que sous Android Auto, il est uniquement possible de supprimer d\'un coup l\'intégralité des voitures appairées et non une à la fois ? Cette option sera très utile si vous voulez faire des suppressions spécifiques. Pour cela, il suffit de sélectionner la ou les voitures que vous voulez et elles seront supprimées.</string>
+    <string name="custom_startup_option">Option de démarrage personnalisée</string>
+    <string name="tutorial_custom_startup_option">Cette modification activera une nouvelle option dans les paramètres d\'Android Auto permettant à l\'utilisateur de définir ce qui doit s\'ouvrir au démarrage d\'Android Auto. Vous pouvez choisir d\'ouvrir la dernière application de navigation, la dernière application de musique ou simplement le lanceur. Android Auto 6.8 ou supérieur est requis.</string>
+    <string name="custom_hotseat_option">Option du siège conducteur</string>
+    <string name="tutorial_hotseat_option">Cette modification activera une nouvelle option dans les paramètres d\'Android Auto permettant à l\'utilisateur de décider si la position de conduite est à gauche ou à droite afin qu\'Android Auto puisse adapter son interface utilisateur. Android Auto 6.9 ou supérieur est requis.</string>
 </resources>
