--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -10,7 +10,7 @@ Als je niet zeker weet wat een tweak doet, kun je er lang op drukken om een tuto
     <string name="disable_speed_limitations">tik beperkingen</string>
     <string name="unlimited_scrolling_when_driving">snelheidsbeperkingen</string>
     <string name="enable_assistant_animation_in_navbar">Assistent-animatie in de navigatiebalk</string>
-    <string name="splash">Deze app kan het gedrag van Android veranderen en sommige veiligheidsfuncties omzeilen die Google heeft geïmplementeerd in Android Auto.\n
+    <string name="splash">Deze app kan het gedrag van Android Auto veranderen en sommige veiligheidsfuncties omzeilen die Google heeft geïmplementeerd in Android Auto.\n
 Door deze software te gebruiken, ga je ermee akkoord dat JIJ en ALLEEN JIJ verantwoordelijk bent voor alle mogelijke gevolgen van het omzeilen van die veiligheidsvoorzieningen, zoals letsel voor jezelf en/of anderen, schade of overlijden.\n
  Onder geen omstandigheden is de auteur van deze app verantwoordelijk voor het gebruik ervan</string>
     <string name="proceed">Begrepen</string>
@@ -23,12 +23,12 @@ GEEL= Toestel moet opnieuw worden opgestart om toe te passen\n
 ROOD = Aanpassing niet toegepast\n</string>
     <string name="set_notification_duration_to">Duur notificatie</string>
     <string name="base_no_ws">Breedbeeld</string>
-    <string name="force_widescreen_text">Forceer Breedbeeld</string>
-    <string name="media_notification_duration_to">Duur medianotificatie</string>
+    <string name="force_widescreen_text">Forceer breedbeeld</string>
+    <string name="media_notification_duration_to">Duur media-notificatie</string>
     <string name="bluetooth_auto_connect">Bluetooth automatisch verbinden</string>
     <string name="tutorial_nospeed">Deze tweak zorgt ervoor dat Android Auto denkt dat de auto niet rijdt. Als gevolg daarvan zal Android Auto altijd het voorbeeld van berichten tonen. Deze tweak is niet van toepassing op de toetsenbord- of eerste configuratie van Android Auto.</string>
     <string name="tutorial_sixtap">Deze tweak overschrijft de limiet van 6 tikken van Android Auto en maakt onbeperkt browsen van inhoud altijd mogelijk.</string>
-    <string name="tutorial_shortcuts">Deze tweak zal de nieuwe Assistent-snelkoppelingen aanzetten. Eenmaal geäctiveerd, kun je in Android Auto instellingen, bij het aanpassen van de launcher, snelkoppelingen aanmaken</string>
+    <string name="tutorial_shortcuts">Deze tweak zal de nieuwe Assistent-snelkoppelingen aanzetten. Eenmaal geactiveerd, kun je in Android Auto instellingen, bij het aanpassen van de launcher, snelkoppelingen aanmaken</string>
     <string name="tutorial_startup">Deze tweak zal ervoor zorgen dat Android Auto standaard opstart met de launcher in plaats van de navigatie-app.\n
 Deze tweak kan af en toe mislukken omdat Android Auto met een navigatie naar huis óf autonoom start. Dit gedrag zal de tweak deactiveren.\n
 In sommige gevallen zal deze tweak het automatisch starten van muziek uitschakelen. In dat geval is het beste om de optie binnen Android Auto instellingen tijdelijk uit te schakelen en daarna weer in te schakelen.\n
@@ -64,7 +64,7 @@ HET IS NIET MOGELIJK OM ANDROID AUTO MET EEN ANDERE, SPECIFIEKE APP TE STARTEN.<
     <string name="force_widescreen_warning">Forceer breedbeeldscherm is automatisch uitgeschakeld</string>
     <string name="force_disable_widescreen_warning">Forceer uitschakeling breedbeeldscherm is automatisch uitgeschakeld</string>
     <string name="set_value">Stel in\u0020</string>
-    <string name="reboot_to_apply">REBOOT OM TE TOEPASSEN</string>
+    <string name="reboot_to_apply">REBOOT TO APPLY</string>
     <string name="warning_title">WAARSCHUWING</string>
     <string name="unpatch">Unpatch\u0020</string>
     <string name="patch_app">Patch\u0020</string>
@@ -84,7 +84,7 @@ WAARSCHUWING: Deze tweak is niet uitgebreid getest en kan Android Auto mogelijk 
     <string name="reboot_prompt">Telefoon nu herstarten?</string>
     <string name="rebooting_action">Herstarten…</string>
     <string name="negative_button">annuleer</string>
-    <string name="added_app_action">Toegevoegd: </string>
+    <string name="added_app_action">"Toegevoegd: "</string>
     <string name="removed_app_action">Verwijderd\u0020</string>
     <string name="root_access_warning">Root toegang geweigerd. A.u.b. root toegang verlenen.</string>
     <string name="revert_everything_dialog">Wil je alles terugzetten? A.u.b. de app hierna handmatig herstarten</string>
@@ -97,11 +97,7 @@ WAARSCHUWING: Deze tweak is niet uitgebreid getest en kan Android Auto mogelijk 
     <string name="not_enabled_warning">Android Auto is niet ingeschakeld</string>
     <string name="not_installed_warning">Android Auto is niet geïnstalleerd</string>
     <string name="currently_set">"Momenteel ingesteld: "</string>
-    <string name="tutorial_messages_tweak">"Door deze tweak verschijnen sommige berichten apps als een pictogram op Android Auto. Eenmaal geopend, worden de meldingen van die app weergegeven. Meldingen worden ook nog steeds ontvangen in het meldingencentrum. "</string>
-    <string name="messages_tweak_string">berichten apps</string>
     <string name="no_accounts_warning">AA AIO TWEAKER kon geen account vinden in de Google Play Services database. Dit kan door verschillende dingen veroorzaakt zijn, zoals:\n • Het apparaat is niet verbonden met internet\n • Een nieuwe installatie van de telefoon\n • Corrupte Google Play Services database\n • Verwijdering van een Google account(s) van de telefoon\n • Gewiste data van Google Play Services\n\nIn dit scenario zal AA AIO TWEAKER niet naar behoren werken. Als u onlangs een Google-account hebt verwijderd of Google Play Services gegevens heeft verwijderd, houd de telefoon verbonden met internet en laat het de Google Play Services database volledig bouwen. Dit kan enkele uren duren, in sommige gevallen ook dagen.\n\nAls de bovenstaande redenen bij jou niet van toepassing zijn, open dan een issue op GitHub.</string>
-    <string name="media_tabs_string">media apps tabbladen eergave</string>
-    <string name="tutorial_media_tabs">"Met deze tweak wordt een nieuwe UI voor mediaspelerapplicaties geforceerd. Niet elke app ondersteunt deze UI. Android Auto 5.8 of hoger is vereist. "</string>
     <string name="tweak_loading">De tweak aan het toepassen...</string>
     <string name="loading">Laden, even geduld a.u.b....</string>
     <string name="tutorial_bitrate">Deze tweak zal de video bitrate verhogen of verlagen volgens de instelling van de vermenigvuldigingsfactor(tot 2.0x). Verhogen van de bitrate (meer dan 1.0x) betekent dat er meer data naar de auto zal worden verstuurd en dat de kwaliteit van video streaming kan worden verbeterd in visuele kwaliteit. Het kan echter wel instabiliteit veroorzaken. Vermindering van de bitrate (minder dan 1.0x) zal de stream naar de auto comprimeren en de kwaliteit zal dalen, maar het zal resulteren in een betrouwbaardere en snelle verbinding.</string>
@@ -126,4 +122,8 @@ WAARSCHUWING: Deze tweak is niet uitgebreid getest en kan Android Auto mogelijk 
     <string name="remove_paired_car">Verwijder een gekoppelde auto</string>
     <string name="choose_cars">Kies auto(s)</string>
     <string name="tutorial_carremover">Wist je dat je alleen alle gekoppelde auto\'s van Android Auto kunt verwijderen en dat je ze niet één voor één kunt verwijderen? Deze optie zal je helpen indien je een auto van Android Auto wilt verwijderen, selecteer gewoon welke auto(s) je wilt en zij/zij zullen worden verwijderd.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
