--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -86,7 +86,7 @@ UPOZORNENIE: Toto vylepšenie nebolo podrobne testované a mohlo by potenciálne
     <string name="reboot_prompt">Reštartovať telefón teraz?</string>
     <string name="rebooting_action">Reštartovanie…</string>
     <string name="negative_button">zrušenie</string>
-    <string name="added_app_action">Pridané: </string>
+    <string name="added_app_action">"Pridané: "</string>
     <string name="removed_app_action">Odobraté\u0020</string>
     <string name="root_access_warning">Zamietnutý Root prístup. Prosím povoľte Root prístup.</string>
     <string name="revert_everything_dialog">Chcete všetko vrátiť späť? Po vykonaní aplikáciu reštartujte manuálne</string>
@@ -99,11 +99,7 @@ UPOZORNENIE: Toto vylepšenie nebolo podrobne testované a mohlo by potenciálne
     <string name="not_enabled_warning">Android Auto nie je povolené</string>
     <string name="not_installed_warning">Android Auto nie je inštalované</string>
     <string name="currently_set">"Aktuálne nastavené: "</string>
-    <string name="tutorial_messages_tweak">"Toto vylepšenie umožní niektorým aplikáciám na odosielanie správ sa zobraziť ako ikona v Android Auto. Po otvorení sa zobrazia upozornenia príslušnej aplikácie. Oznámenia sa budú naďalej dostávať aj do centra upozornení. "</string>
-    <string name="messages_tweak_string">aplikácie na odosielanie správ</string>
     <string name="no_accounts_warning">AA AIO TWEAKER nemohol nájsť žiadny účet v databáze služieb Google Play. Príčinou môže byť niekoľko rôznych vecí, ako napríklad:\n • Zariadenie, ktoré väčšinou nie je pripojené k internetu\n • Nová inštalácia telefónu\n • Poškodená databáza služieb Google Play\n • Odstránenie účtu (účtov) Google z telefónu\n • Vymazané údaje služieb Google Play\n\nPri takomto scenári AA AIO TWEAKER ZLYHÁ a nefunguje správne. Ak ste nedávno odstránili účet Google alebo vymazali údaje služieb Google Play, udržujte telefón pripojený k internetu a nechajte ho, aby úplne vytvorilo databázu služieb Google Play. Môže to trvať niekoľko hodín, v niektorých prípadoch aj dni.\n\nAk nemáte žiadnu z vyššie uvedených podmienok, otvorte problém na GitHub.</string>
-    <string name="media_tabs_string">media aplikácie zobrazené v kartách</string>
-    <string name="tutorial_media_tabs">"Toto vylepšenie vynúti povolenie nového používateľského rozhrania pre aplikácie prehrávača médií. Nie všetky aplikácie toto používateľské rozhranie podporujú. Vyžaduje sa Android Auto 5.8 alebo vyšší. "</string>
     <string name="tweak_loading">Uplatňujú sa vylepšenia...</string>
     <string name="loading">Načítavam, počkajte prosím...</string>
     <string name="tutorial_bitrate">Toto vylepšenie zvýši alebo zníži dátový tok videa podľa nastaveného násobiteľa (až 2,0x). Zvýšenie dátového toku (viac ako 1,0-násobne) bude znamenať, že do jednotky auta bude streamovaných viac dát a mohla by sa zlepšiť kvalita video toku vo viditeľnej kvalite, čo by však mohlo spôsobiť nestabilitu. Zníženie dátového toku (menej ako 1,0-násobok) spôsobí kompresiu toku do auta a zníži sa kvalita a výsledkom bude spoľahlivejšie a rýchlejšie pripojenie.</string>
@@ -128,4 +124,8 @@ UPOZORNENIE: Toto vylepšenie nebolo podrobne testované a mohlo by potenciálne
     <string name="remove_paired_car">Odobrať spárované vozidlo</string>
     <string name="choose_cars">Výber auta (áut)</string>
     <string name="tutorial_carremover">Vedeli ste, že Android Auto vie odstrániť iba všetky spárované autá a nemôžete odstrániť jedno po druhom? Táto možnosť vám pomôže, ak chcete vymazať jednotlivo autá z Android Auto, stačí zvoliť, ktoré auto (autá) chcete, a to bude odstránené.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
