--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_string">AA AIO Tweaker \'e Hoşgeldiniz.\n
+    <string name="main_string">AA AIO Tweaker\'e Hoş geldiniz.\n
 Bu uygulama Android Auto\'ya bazı düzenlemeler uygulamanıza izin verecektir.\n
 Uygulamak istediğiniz ince ayarı seçmeniz yeterlidir :).\n
-Bir tweak\'in ne yaptığından emin değilseniz, üzerine uzun basın ve bir öğretici göreceksiniz.</string>
+Bir ayarın ne yaptığından emin değilseniz, üzerine uzun basın ve bir öğretici göreceksiniz.</string>
     <string name="select_apps">Uygulamaları seç</string>
     <string name="enable_assistant_shortcuts">Asistan kısayolları</string>
-    <string name="patch_custom_apps">özel uygulamalar</string>
+    <string name="patch_custom_apps">Özel uygulama</string>
     <string name="disable_speed_limitations">dokunma kısıtlamaları</string>
     <string name="unlimited_scrolling_when_driving">hız kısıtlamaları</string>
     <string name="enable_assistant_animation_in_navbar">Alt çubukta asistan animasyonu</string>
@@ -83,7 +83,7 @@ UYARI: Bu ince ayar kapsamlı bir şekilde test edilmiştir ve Android Auto\'ya 
     <string name="reboot_prompt">Telefon Yeniden Başlatılsın mı?</string>
     <string name="rebooting_action">Yeniden başlatılıyor…</string>
     <string name="negative_button">iptal</string>
-    <string name="added_app_action">Eklendi: </string>
+    <string name="added_app_action">"Eklendi: "</string>
     <string name="removed_app_action">Kaldırıldı\u0020</string>
     <string name="root_access_warning">Kök erişimi reddedildi. Lütfen kök erişimine izin verin.</string>
     <string name="revert_everything_dialog">Her şeyi geri çevirmek mi istiyorsunuz? Bunu yaptıktan sonra lütfen programı yeniden başlatın</string>
@@ -96,11 +96,7 @@ UYARI: Bu ince ayar kapsamlı bir şekilde test edilmiştir ve Android Auto\'ya 
     <string name="not_enabled_warning">Android Auto etkin değil</string>
     <string name="not_installed_warning">Android Auto yüklü değil</string>
     <string name="currently_set">"Şu anki değeri: "</string>
-    <string name="tutorial_messages_tweak">"Bu tweak, bazı mesajlaşma uygulamalarının Android Otomatik'teki bir simge olarak görünmesini sağlayacaktır. Açıldıktan sonra, bu uygulamanın bildirimleri görünecektir. Bildirimler hala bildirimlerin merkezinde de alınacak. "</string>
-    <string name="messages_tweak_string">mesajlaşma uygulamaları</string>
     <string name="no_accounts_warning">AA AIO TWEAKER, Google Play Hizmetleri veritabanında herhangi bir hesap bulamadı. Bunun nedeni şu gibi birkaç farklı şey olabilir:\n• Çoğunlukla internete bağlı olmayan cihaz\n• Telefon yeni kurulduysa\n• Bozuk Google Play Hizmetleri veritabanı\n• Google hesaplarının telefondan kaldırılması\n• Google Play Services\'in verileri temizlenmiş\n\nBu senaryoda, AA AIO TWEAKER düzgün çalışamayacaktır. Yakın zamanda bir Google hesabını kaldırdıysanız veya Google Play Hizmetleri verilerini temizlediyseniz, lütfen telefonu internete bağlı tutun ve Google Play Hizmetleri veritabanını tam olarak oluşturmasına izin verin. Bu, bazı durumlarda günlerce veya birkaç saat sürebilir.\n\nYukarıdaki koşullardan birinde değilseniz, lütfen Github\'da bir sorun açın.</string>
-    <string name="media_tabs_string">medya Uygulamaları Sekmeli Görünüm</string>
-    <string name="tutorial_media_tabs">"Bu ince ayar, medya oynatıcı uygulamaları için yeni bir kullanıcı arabirimini etkinleştirmeye zorlayacaktır. Her uygulama bu kullanıcı arabirimini desteklemez. Android Auto 5.8 veya üstü gereklidir. "</string>
     <string name="tweak_loading">Yama uygulanıyor...</string>
     <string name="loading">Yükleniyor, lütfen bekleyin...</string>
     <string name="tutorial_bitrate">Bu ayar, video bit hızını çarpan ayarına göre artıracak veya azaltacaktır (2.0x\'e kadar). Bit hızının arttırılması (1.0 x\'den fazla), araca daha fazla veri aktarılacağı ve video akışının kalitesinin görsel kalitede geliştirilebileceği anlamına gelecektir, ancak kararsızlığa neden olabilir. Bit hızının azaltılması (1.0 x\'den az) yayın akışını sıkıştırır ve kalite azalır, ancak daha güvenilir ve hızlı bir bağlantı ile sonuçlanır.</string>
@@ -112,18 +108,22 @@ UYARI: Bu ince ayar kapsamlı bir şekilde test edilmiştir ve Android Auto\'ya 
     <string name="tutorial_alphajump">Bu ayar, listelerin harflerle nasıl görüntülenebileceğini değiştiren yeni (ve gizli) bir yeniden tasarlamayı etkinleştirir.
 Üstteki A-Z düğmesi yerine, kaydırma olmadığında kaydırma çubuğunda görünecek ve harflerle tekrar göz atmak için en üste gitmek zorunda kalmayacaksınız.</string>
     <string name="alpha_jump_tweak">yeni alfabe atlama</string>
-    <string name="choose_accounts">Choose accounts</string>
-    <string name="use_all">Use all (EXPERIMENTAL)</string>
-    <string name="copied_pastebin">A link to the log has been created and copied to clipboard</string>
-    <string name="log_copied">Log has been copied</string>
-    <string name="new_version_available">New Version available</string>
-    <string name="go_to_new_version">A new version of AA AIO TWEAKER (version %1$s) is available on GitHub. Do you want to download it now?</string>
-    <string name="go_to_download">Go to download</string>
-    <string name="ignore_for_now">Ignore for now</string>
-    <string name="many_accounts_warning">AA AIO TWEAKER found a large number (%1$s) of Google accounts saved in the device.\nThis can negatively impact on the success of the patching process and AA AIO TWEAKER might fail.\nYou can either choose the account(s) that you mostly use with Google Play Services to apply the patch to just them (2 or less is recommended) or activate an experimental mode that should patch all accounts.\nPLEASE NOTE that the experimental mode might cause some crashes to the phone while the patch is running.</string>
-    <string name="dark_switch_tweak">day/night option</string>
-    <string name="tutorial_darkmodeswitch">This tweak will activate a dedicated toggle in Android Auto generic settings (both car and phone) that can control the status of day/night mode on Android Auto. This option is different from the one in developer settings because it doesn\'t need a restart of Android Auto and it will actually have effect on the usage after Google enabling the independent dark mode. Android Auto 6.3 or superior is required.</string>
-    <string name="remove_paired_car">Remove a paired car</string>
-    <string name="choose_cars">Choose car(s)</string>
-    <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="choose_accounts">Hesap Seçin</string>
+    <string name="use_all">Hepsini kullan (DENEYSEL)</string>
+    <string name="copied_pastebin">Günlüğe bir bağlantı oluşturuldu ve panoya kopyalandı</string>
+    <string name="log_copied">Günlük kopyalandı</string>
+    <string name="new_version_available">Yeni versiyon mevcut</string>
+    <string name="go_to_new_version">AA AIO TWEAKER\'ın (%1$s sürümü) yeni bir sürümü GitHub\'da kullanılabilir. Şimdi indirmek istiyor musunuz?</string>
+    <string name="go_to_download">İndirmeye git</string>
+    <string name="ignore_for_now">Şimdilik yoksay</string>
+    <string name="many_accounts_warning">AA AIO TWEAKER, cihazda kayıtlı çok sayıda (%1$s) Google Hesabı buldu.\nBu, yamalama işleminin başarısını olumsuz yönde etkileyebilir ve AA Aio Tweaker başarısız olabilir.\nÇoğunlukla Google Play Servisleri ile birlikte kullandığınız hesapları seçebilirsiniz (2 veya daha az önerilir) veya tüm hesapları düzeltmesi gereken deneysel bir modu etkinleştirin.\nLütfen, deney modunun, yama çalışırken telefona bazı çöküşlere neden olabileceğini unutmayın.</string>
+    <string name="dark_switch_tweak">gündüz/gece seçeneği</string>
+    <string name="tutorial_darkmodeswitch">Bu ince ayar, Android Auto\'da gündüz / gece modunun durumunu kontrol edebilecek Android Auto genel ayarlarında (hem araba hem de telefon) özel bir geçiş etkinleştirecektir. Bu seçenek geliştirici ayarlarındakinden farklıdır, çünkü Android Auto\'nun yeniden başlatılmasına ihtiyaç duymaz ve Google bağımsız karanlık modu etkinleştirdikten sonra kullanım üzerinde etkili olacaktır. Android Auto 6.3 veya üstü gereklidir.</string>
+    <string name="remove_paired_car">Eşleştirilmiş bir arabayı kaldırma</string>
+    <string name="choose_cars">Araba(ları) Seç</string>
+    <string name="tutorial_carremover">Android Auto\'dan yalnızca eşleştirilmiş tüm arabaları kaldırabileceğinizi ve aynı anda yalnızca birini kaldıramayacağınızı biliyor muydunuz? Android Otomatik\'ten bir arabayı silmek istiyorsanız, bu seçenek sizi kurtarır, sadece istediğiniz arabaları seçin ve kaldırılır.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
