--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -4,9 +4,9 @@
 Đây là ứng dụng sẽ giúp bạn tinh chỉnh một vài thông số trong Android Auto\n
 Chỉ đơn giản là chọn và điều chỉnh các thông số mà bạn muốn :)\n
 Nếu bạn chưa chắc chắn gì những gì công cụ sẽ làm, chỉ cần ấn giữ và bảng hướng dẫn sẽ hiện ra.</string>
-    <string name="select_apps">Select app</string>
-    <string name="enable_assistant_shortcuts">Lối tắt đến lệnh</string>
-    <string name="patch_custom_apps">ứng dụng ngoài</string>
+    <string name="select_apps">chọn ứng dụng</string>
+    <string name="enable_assistant_shortcuts">Lối tắt trợ lý</string>
+    <string name="patch_custom_apps">ứng dụng tùy chỉnh</string>
     <string name="disable_speed_limitations">giới hạn số lần chạm</string>
     <string name="unlimited_scrolling_when_driving">giới hạn tốc độ</string>
     <string name="enable_assistant_animation_in_navbar">Biểu tượng trợ lý trên thanh điều hướng</string>
@@ -15,7 +15,7 @@ Khi sử dụng ứng dụng này, bạn đồng ý với BẠN, và CHỈ MÌNH
 Trong mọi trường hợp, tác giả của ứng dụng này không chịu trách nhiệm về việc bạn sử dụng nó</string>
     <string name="proceed">Tôi hiểu</string>
     <string name="navigation_at_start">Điều hướng khi khởi động</string>
-    <string name="statb_opaque_string">Buộc thanh trạng thái tối</string>
+    <string name="statb_opaque_string">Buộc làm mờ thanh trạng thái</string>
     <string name="battery_outline_string">biểu tượng tiết kiệm pin</string>
     <string name="legend">Biểu tượng trạng thái:\n
 XANH LÁ CÂY: Đã áp dụng thay đổi\n
@@ -70,7 +70,7 @@ Yêu cầu sử dụng Android Auto 5.8 hoặc cao hơn.</string>
     <string name="default_string">\u0020Mặc định</string>
     <string name="app_list_label">Danh sách ứng dụng</string>
     <string name="translators_button">Dịch bởi</string>
-    <string name="about_part_one"><![CDATA[AA AIO TWEAKER is developed and maintained by Shmykelsa.<br><br>Source code is available on <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
+    <string name="about_part_one"><![CDATA[AA AIO TWEAKER is phát triển và bảo trì bởi Shmykelsa.<br><br>Mã nguồn có sẵn tại <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
     <string name="about_part_two"><![CDATA[Nếu bạn thực sự thích công việc của tôi, hãy cân nhắc đến việc ủng hộ tiền.<br> Bạn có thêt ủng hộ tiền cho tôi qua <a href=\"http://www.paypal.me/grizzo96\">PayPal</a> hoặc vạn có thêt sao chép địa chỉ ví Bitcoin của tôi ở bên dưới.<br><br>Sự đóng góp của bạn dù nhỏ cũng rất được trân trọng :)]]></string>
     <string name="copied_address_toast">Địa chỉ Bitcoin đã được sao chép</string>
     <string name="custom_wallpapers">Màn hình nền</string>
@@ -83,7 +83,7 @@ CẢNH BÁO: Tùy chỉnh này chưa được thử nghiệm rộng rãi và có
     <string name="reboot_prompt">Khởi động lại điện thoại ngay bây giờ?</string>
     <string name="rebooting_action">Đang khởi động lại...</string>
     <string name="negative_button">hủy</string>
-    <string name="added_app_action">Đã thêm: </string>
+    <string name="added_app_action">"Đã thêm: "</string>
     <string name="removed_app_action">Đã gỡ bỏ\u0020</string>
     <string name="root_access_warning">Quyền root bị từ chối. Vui lòng cho phép truy cập quyền root.</string>
     <string name="revert_everything_dialog">Bạn có chắc là muốn trở lại nguyên thể mọi thứ? Vui lòng khởi động app bằng tay sau khi thực hiện</string>
@@ -91,38 +91,38 @@ CẢNH BÁO: Tùy chỉnh này chưa được thử nghiệm rộng rãi và có
     <string name="calendar_tweak_single">Cài đặt %1$s ngày khả dụng trong lịch</string>
     <string name="tutorial_calendar_tweak">Tinh chỉnh này sẽ giúp ứng dụng lịch trong Android Auto có thể hiển thị nhiều ngày thay vì chỉ một ngày. Xin lưu ý rằng ngay cả khi tăng số ngày, rõ ràng vẫn không thể phân biệt được ngày nào bạn đang xem các sự kiện. Android Auto sẽ chỉ hiển thị số lượng sự kiện được thiết lập trong một ngày và nó sẽ không hiển thị đó là ngày nào.</string>
     <string name="choose_apps_warning">Chọn những app vào trong whitelist</string>
-    <string name="log_first_line">LOG:\n</string>
+    <string name="log_first_line">Nhật Ký:\n</string>
     <string name="menu_aa_settings">Mở các cài đặt Android Auto</string>
     <string name="not_enabled_warning">Android Auto không khả dụng</string>
     <string name="not_installed_warning">Android Auto chưa cài đặt</string>
     <string name="currently_set">"Cài đặt hiện tại: "</string>
-    <string name="tutorial_messages_tweak">"Tinh chỉnh này sẽ làm cho một số ứng dụng nhắn tin xuất hiện dưới dạng biểu tượng trên Android Auto. Sau khi mở, các thông báo của ứng dụng đó sẽ xuất hiện. Thông báo cũng sẽ được nhận trên trung tâm thông báo. "</string>
-    <string name="messages_tweak_string">những app tin nhắn</string>
-    <string name="no_accounts_warning">AA AIO TWEAKER could not find any account in Google Play Services database. This can be caused by several different things such as:\n • Device that is mostly not connected to internet\n • Fresh install of the phone\n • Corrupted Google Play Services database\n • Removal of Google account(s) from the phone\n • Cleared datas of Google Play Services\n\nIn this scenario, AA AIO TWEAKER will FAIL to work properly. If you recently removed a Google account or cleared Google Play Services datas, please keep the phone connected to internet and let it build the Google Play Services database fully. This might take several hours, in some cases also days.\n\nIf you are not in one of the above conditions, please open a issue on GitHub.</string>
-    <string name="media_tabs_string">media apps tabbed view</string>
-    <string name="tutorial_media_tabs">"This tweak will force enable a new UI for media player applications. Not every app support this UI. Android Auto 5.8 or superior is required. "</string>
-    <string name="tweak_loading">Applying the tweak...</string>
-    <string name="loading">Loading, please wait...</string>
-    <string name="tutorial_bitrate">This tweak will increase or decrease video bitrate according to the multiplier set (up to 2.0x). Increasing the bitrate (more than 1.0x) will mean that more datas will be streamed to the car and quality of video streaming could be improved in visual quality, however it might cause instability. Decreasing the bitrate (less than 1.0x) will compress the stream to the car and quality will be decreased, but it will result in a more reliable and fast connection.</string>
-    <string name="set_wifi_tweak">wifi bitrate to</string>
-    <string name="set_usb_bitrate">USB bitrate to</string>
-    <string name="choose_value_first">Choose a value first</string>
-    <string name="open_issue_button">Open Issue</string>
-    <string name="error_generic">The command was not successful. Please wait some minutes and try again. If problem is still ongoing, please open a issue on GitHub</string>
+    <string name="no_accounts_warning">AA AIO TWEAKER không thể tìm thấy bất kỳ tài khoản nào trong cơ sở dữ liệu Dịch vụ của Google Play. Điều này có thể do một số nguyên nhân khác nhau, chẳng hạn như:\n • Thiết bị không được kết nối với internet\n • Điện thoại được đặt lại\n • Cơ sở dữ liệu của Dịch vụ Google Play bị hỏng\n • (Các) tài khoản Google bị xoá khỏi điện thoại\n • Đã xóa dữ liệu của Dịch vụ Google Play\n\nTrong trường hợp này, AA AIO TWEAKER sẽ KHÔNG hoạt động bình thường. Nếu gần đây bạn đã xóa tài khoản Google hoặc xóa dữ liệu Dịch vụ của Google Play, vui lòng giữ điện thoại kết nối với Internet và để điện thoại xây dựng đầy đủ cơ sở dữ liệu của Dịch vụ Google Play. Quá trình này có thể mất vài giờ, trong một số trường hợp cũng có thể vài ngày.\n\nNếu bạn không thuộc một trong các điều kiện trên, vui lòng mở sự cố trên GitHub.</string>
+    <string name="tweak_loading">Đang áp dụng tinh chỉnh...</string>
+    <string name="loading">Đang tải, vui lòng chờ...</string>
+    <string name="tutorial_bitrate">Tinh chỉnh này sẽ tăng hoặc giảm tốc độ bit của video theo bộ số nhân (lên đến 2.0x). Tăng tốc độ bit (nhiều hơn 1.0x) sẽ có nghĩa là nhiều dữ liệu hơn sẽ được truyền trực tuyến đến xe hơi và chất lượng phát trực tuyến video có thể được cải thiện về chất lượng hình ảnh, tuy nhiên nó có thể gây ra sự không ổn định. Giảm tốc độ bit (nhỏ hơn 1,0x) sẽ nén luồng vào ô tô và chất lượng sẽ bị giảm, nhưng nó sẽ dẫn đến kết nối nhanh và đáng tin cậy hơn.</string>
+    <string name="set_wifi_tweak">cài wifi bitrate đến</string>
+    <string name="set_usb_bitrate">cài USB bitrate đến</string>
+    <string name="choose_value_first">Chọn một giá trị trước tiên</string>
+    <string name="open_issue_button">Mở sự cố</string>
+    <string name="error_generic">Lệnh không thành công. Vui lòng đợi vài phút và thử lại. Nếu sự cố vẫn đang tiếp diễn, vui lòng mở sự cố trên GitHub.</string>
     <string name="tutorial_alphajump">This tweak will activate a new (and hidden) redesign that changes how lists can be browsed with letters. Instead of the A-Z button at the top, the button will appear on the scrollbar when there\'s no scroll happening and you won\'t be forced to go to top to browse with letters again.</string>
     <string name="alpha_jump_tweak">new alphabet jump</string>
-    <string name="choose_accounts">Choose accounts</string>
-    <string name="use_all">Use all (EXPERIMENTAL)</string>
-    <string name="copied_pastebin">A link to the log has been created and copied to clipboard</string>
-    <string name="log_copied">Log has been copied</string>
-    <string name="new_version_available">New Version available</string>
-    <string name="go_to_new_version">A new version of AA AIO TWEAKER (version %1$s) is available on GitHub. Do you want to download it now?</string>
-    <string name="go_to_download">Go to download</string>
-    <string name="ignore_for_now">Ignore for now</string>
-    <string name="many_accounts_warning">AA AIO TWEAKER found a large number (%1$s) of Google accounts saved in the device.\nThis can negatively impact on the success of the patching process and AA AIO TWEAKER might fail.\nYou can either choose the account(s) that you mostly use with Google Play Services to apply the patch to just them (2 or less is recommended) or activate an experimental mode that should patch all accounts.\nPLEASE NOTE that the experimental mode might cause some crashes to the phone while the patch is running.</string>
-    <string name="dark_switch_tweak">day/night option</string>
-    <string name="tutorial_darkmodeswitch">This tweak will activate a dedicated toggle in Android Auto generic settings (both car and phone) that can control the status of day/night mode on Android Auto. This option is different from the one in developer settings because it doesn\'t need a restart of Android Auto and it will actually have effect on the usage after Google enabling the independent dark mode. Android Auto 6.3 or superior is required.</string>
-    <string name="remove_paired_car">Remove a paired car</string>
-    <string name="choose_cars">Choose car(s)</string>
-    <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="choose_accounts">Chọn tài khoản</string>
+    <string name="use_all">Sử dụng tất cả (THỬ NGHIỆM) </string>
+    <string name="copied_pastebin">Một liên kết đến nhật ký đã được tạo và sao chép vào khay nhớ tạm </string>
+    <string name="log_copied">Nhật ký đã được sao chép</string>
+    <string name="new_version_available">Có phiên bản mới khả dụng</string>
+    <string name="go_to_new_version">Một phiên bản mới của AA AIO TWEAKER (phiên bản %1$s) khả dụng trên GitHub. Bạn có muốn tải nó bây giờ?</string>
+    <string name="go_to_download">Đến trang tải xuống</string>
+    <string name="ignore_for_now">Bỏ qua bây giờ</string>
+    <string name="many_accounts_warning">AA AIO TWEAKER đã tìm thấy một số lượng lớn (%1$s) tài khoản Google được lưu trong thiết bị.\nĐiều này có thể ảnh hưởng tiêu cực đến sự thành công của quá trình vá lỗi và AA AIO TWEAKER có thể không thành công.\nBạn có thể chọn (các) tài khoản mà bạn chủ yếu sử dụng với Dịch vụ Google Play để chỉ áp dụng bản vá cho chúng (khuyến nghị 2 hoặc ít hơn) hoặc kích hoạt chế độ thử nghiệm vá tất cả các tài khoản.\nHÃY LƯU Ý rằng chế độ thử nghiệm có thể gây ra một số sự cố cho điện thoại trong khi vá đang chạy.</string>
+    <string name="dark_switch_tweak">lựa chọn ngày/đêm</string>
+    <string name="tutorial_darkmodeswitch">Tinh chỉnh này sẽ kích hoạt một nút bật tắt chuyên dụng trong cài đặt chung của Android Auto (cả ô tô và điện thoại) có thể kiểm soát trạng thái của chế độ ngày/đêm trên Android Auto. Tùy chọn này khác với tùy chọn trong cài đặt dành cho nhà phát triển vì nó không cần khởi động lại Android Auto và nó sẽ thực sự ảnh hưởng đến việc sử dụng sau khi Google bật chế độ tối độc lập. Android Auto 6.3 trở lên là bắt buộc. </string>
+    <string name="remove_paired_car">Xoá xe đã kết nối</string>
+    <string name="choose_cars">Chọn xe</string>
+    <string name="tutorial_carremover">Bạn có biết rằng bạn chỉ có thể xóa tất cả ô tô đã ghép nối khỏi Android Auto và không thể xóa từng ô tô một không? Tùy chọn này sẽ giải cứu bạn nếu bạn muốn xóa ô tô khỏi Android Auto, chỉ cần chọn (các) ô tô bạn muốn và nó/chúng sẽ bị xóa.</string>
+    <string name="custom_startup_option">Custom boot option</string>
+    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
+    <string name="custom_hotseat_option">Custom seating option</string>
+    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
 </resources>
