--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -56,19 +56,19 @@
     <string name="default_string">默認設備</string>
     <string name="app_list_label">應用列表</string>
     <string name="translators_button">翻譯者</string>
-    <string name="about_part_one"><![CDATA[AA AIO TWEAKER是由 Shmykelsa 開發和維護的。&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;源代碼可在&amp;lt;a href=https://github.com/shmykelsa/AA-Tweaker&amp;gt;GitHub&amp;lt;/a&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;]]></string>
-    <string name="about_part_two"><![CDATA[如果你真的喜歡我的工作，請考慮捐贈。&amp;lt;br&amp;gt;您可以通過&amp;lt;a href=http://www.paypal.me/grizzo96&amp;gt;PayPal&amp;lt;/a&amp;gt; 捐贈我，或者您可以通過下面的按鈕複製我的比特幣地址。&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;即使小額也會受到歡迎:)]]></string>
+    <string name="about_part_one"><![CDATA[AA AIO TWEAKER是由 Shmykelsa 開發和維護的。<br><br>源代碼可在<a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
+    <string name="about_part_two"><![CDATA[如果你真的喜歡我的工作，請考慮捐贈。<br><a href=\"http://www.paypal.me/grizzo96\">Paypal</a 捐贈或者按下方的比特幣按鈕複製地址。br><br>即使小額也會受到歡迎:)]]></string>
     <string name="copied_address_toast">地址已複製到剪貼板</string>
     <string name="custom_wallpapers">背景</string>
     <string name="tutorial_wallpapers">此調整可啟用新的內置Android Auto牆紙更換器。 需要Android Auto 5.8或更高版本。 警告：如果您是Android Auto牆紙用戶，則需要至少更新到3.0版。 否則，此調整將破壞Android Auto牆紙的功能。</string>
     <string name="tutorial_dark_mode">從2020年12月開始，Google取消了自Android 10以來發生的行為。以前，Android Auto的亮/暗模式遵循智能手機的亮/暗模式。換句話說，將智能手機切換為黑暗模式也會影響汽車，如果手機處於黑暗模式且汽車的燈光不亮，則智能手機的燈光模式也會打開。 但是，隨著這種“獨立”暗模式功能的引入，售後主機的用戶無法將模式切換到暗模式，除非他們實際將立體聲音響連接到了車燈上。 此調整使“夜間模式”再次取決於智能手機，並且在智能手機上的“亮/暗”模式之間切換，也會對汽車產生影響。</string>
     <string name="dark_mode_tweak">獨立暗模式</string>
     <string name="telemetry_string">Google數據</string>
-    <string name="tutorial_telemetry">Google記錄了很多關於我們的數據。此調整將使Google Play服務停止許多跟蹤和日誌記錄活動。警告：這個調整還沒有得到廣泛的測試，可能會破壞Android Auto。如果你發現這個調整破壞了Android Auto，請打開GitHub的問題。</string>
+    <string name="tutorial_telemetry">Google記錄有關我們的許多數據並不奇怪。 這項調整將使Google Play服務停止大量的跟踪和日誌記錄活動。\n警告：此調整尚未經過廣泛測試，可能會破壞Android Auto。 如果您發現此調整破壞了Android Auto，請在GitHub上回饋問題。</string>
     <string name="reboot_prompt">您要重啟設備嗎？</string>
     <string name="rebooting_action">正在重新啟動...</string>
     <string name="negative_button">取消</string>
-    <string name="added_app_action">已新增</string>
+    <string name="added_app_action">"已新增"</string>
     <string name="removed_app_action">已移除 </string>
     <string name="root_access_warning">Root訪問被拒絕。請允許 root 訪問。</string>
     <string name="revert_everything_dialog">是否要還原所有內容？請在執行此操作後手動重新啟動應用程序</string>
@@ -81,11 +81,7 @@
     <string name="not_enabled_warning">未啟用Android Auto</string>
     <string name="not_installed_warning">未安裝Android Auto</string>
     <string name="currently_set">"當前設置："</string>
-    <string name="tutorial_messages_tweak">"此調整將使一些短信應用程序在Android Auto上顯示為圖標。當您打開時，該應用程序的通知就會顯示。"</string>
-    <string name="messages_tweak_string">短信應用</string>
-    <string name="no_accounts_warning">AA AIO TWEAKER在Google Play服務數據庫中找不到任何帳戶。這可能是由幾種不同的情況引起的，例如： • 大部分未連接到網際網路的設備 • 重新安裝電話 • 損壞的Google Play服務數據庫 • 從電話中刪除了Google帳戶 • 已清除的Google Play服務數據 在這種情況下，AA AIO TWEAKER將無法正常工作。如果您最近刪除了Google帳戶或清除了Google Play服務數據，請保持手機連接到互聯網並完全建立Google Play服務數據庫。這可能需要幾個小時，在某些情況下還需要幾天。 如果您不符合上述條件之一，請在GitHub上回饋問題。</string>
-    <string name="media_tabs_string">媒體應用標籤選項</string>
-    <string name="tutorial_media_tabs">"此調整將強制為媒體播放器應用程序啟用新的UI。並非每個應用程序都支持此UI。需要Android Auto 5.8或更高版本。 "</string>
+    <string name="no_accounts_warning">AA AIO TWEAKER在Google Play服務數據庫中找不到任何帳戶。這可能是由幾種不同的情況引起的，例如： • 大部分未連接到網際網路的設備 • 重新安裝電話 • 損壞的Google Play服務數據庫 • 從電話中刪除了Google帳戶 • 已清除的Google Play服務數據 在這種情況下，AA AIO TWEAKER將無法正常工作。如果您最近刪除了Google帳戶或清除了Google Play服務數據，請保持手機連接到網際網路，並完全建立Google Play服務數據庫。這可能需要幾個小時，在某些情況下還需要幾天。 如果您不符合上述條件之一，請在GitHub上回饋問題。</string>
     <string name="tweak_loading">正在應用調整...</string>
     <string name="loading">加載請稍候...</string>
     <string name="tutorial_bitrate">此調整將根據設定數值（最多2.0倍）提高或降低視頻傳輸位元速率。 增加位元率(大於1.0倍)意指將有更多數據流向傳輸到車機上，並且視頻的質量上可能會得到改善，但可能會導致不穩定； 降低位元率(小於1.0倍)則會壓縮流向車機值(降低質量)，但效能上更可靠、更快速的連接。</string>
@@ -110,4 +106,8 @@
     <string name="remove_paired_car">刪除配對的車子</string>
     <string name="choose_cars">選擇車子</string>
     <string name="tutorial_carremover">您知道嗎，所有配對的車子只能一次從Android Auto中刪除，而不僅僅是一次？ 如果您要從Android Auto中刪除車子，則此選項很有用。 只需選擇需要的車子，它將被刪除。</string>
+    <string name="custom_startup_option">自定義啟動選項</string>
+    <string name="tutorial_custom_startup_option">此調整將激活 Android Auto 中的一個新選項\'s 可設置用戶啟動Android Auto時，要打開的內容。 您可以選擇打開新的導航、音樂應用程序或僅打開啟動器。 需要 Android Auto 6.8 或更高版本。</string>
+    <string name="custom_hotseat_option">自定義駕座選項</string>
+    <string name="tutorial_hotseat_option">此調整將激活 Android Auto 中的一個新選項\'s 可設置用戶決定駕駛位置，是左側還是右側，以便 Android Auto 可以調整其使用介面。 需要 Android Auto 6.9 或更高版本。</string>
 </resources>
